--- a/programas1.html
+++ b/programas1.html
@@ -162,8 +162,8 @@
                 <!--   <img src="img/teamsprite_01.png" alt="Carousel Img"> -->
                 </div>
                 <div class="people-cards__content">
-                  <h2 class="people-cards__title">Automação com chatbot</h2>
-                  <p class="people-cards__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa.</p>
+                  <h2 class="people-cards__title">Chatbot no Direct</h2>
+                  <p class="people-cards__text">Um chatbot no direct oferece atendimento 24/7, respostas automatizadas que economizam tempo e recursos da equipe, personalização com base no histórico do cliente e aumento da satisfação do cliente, levando à fidelização e recomendação da marca. Entre em contato para saber mais!</p>
                 </div>
             </article>
 
@@ -175,8 +175,9 @@
                   <img src="img/whatsapp.png">
                 </div>
                 <div class="people-cards__content">
-                  <h2 class="people-cards__title">Automão com Python </h2>
-                  <p class="people-cards__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa.</p>
+                  <h2 class="people-cards__title">Chatbot no WhatsApp</h2>
+                  <p class="people-cards__text">
+                    Automatize seu atendimento no WhatsApp com um chatbot! Oferecemos respostas instantâneas 24/7, economizando tempo e recursos da sua equipe. Personalize interações com base nas necessidades do cliente e histórico de conversas. Aumente a satisfação e fidelize clientes. Entre em contato para saber mais!</p>
                 </div>
             </article>
 
@@ -191,8 +192,9 @@
               <!--   <img src="img/teamsprite_03.png" alt="Carousel Img">  -->
                 </div>
                 <div class="people-cards__content">
-                  <h2 class="people-cards__title">GESTÃO DE TRAFEGO</h2>
-                  <p class="people-cards__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa.</p>
+                  <h2 class="people-cards__title">Siga Perfis Automaticamente</h2>
+                  <p class="people-cards__text">
+                    Descubra nosso aplicativo exclusivo para seguir perfis no Instagram e Facebook com total segurança e eficiência, sem o risco de banimentos. Com nossa solução, você pode selecionar o nicho de interesse para adicionar aos seus contatos e criar leads personalizadas com seu perfil.Entre em contato para mais detalhes!</p>
                 </div>
             </article>
 
@@ -205,8 +207,8 @@
                <!--  <img src="img/teamsprite_04.png" alt="Carousel Img">  -->
                 </div>
                 <div class="people-cards__content">
-                  <h2 class="people-cards__title">DESENVOLVIMENTO DE E-COMMERCE</h2>
-                  <p class="people-cards__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa.</p>
+                  <h2 class="people-cards__title">Deixe de Seguir Perfis Automaticamente</h2>
+                  <p class="people-cards__text">Nosso aplicativo exclusivo pode deixar de seguir perfis que já não são do seu interesse, ou por qualquer outro motivo, no Instagram e Facebook. Com total segurança e eficiência, você pode gerenciar sua lista de contatos de forma simples e rápida.Entre em contato para mais detalhes.</p>
                 </div>
             </article>
 
@@ -219,38 +221,22 @@
 
 
           <article>
-            <h3>Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed.</h3>
-            <p>Nossa visão na HUB é capacitar empresas de todos os tamanhos e setores com soluções digitais inovadoras. Nós nos esforçamos para fornecer experiências de usuário incomparáveis ​​que impulsionem o crescimento e o sucesso. Nossa equipe se dedica a ultrapassar os limites da tecnologia e do design, garantindo que nossos clientes fiquem à frente da concorrência. Acreditamos num futuro onde a tecnologia e o design serão usados ​​para conectar pessoas e empresas de maneiras novas e estimulantes. Junte-se a nós em nossa jornada para tornar essa visão uma realidade.</p>
+            <h3>Revolucionamos sua Presença Online!</h3>
+            <p>
+              Descubra um mundo de possibilidades com a Hub e nossas inovadoras aplicações! Com um chatbot no direct, você oferece atendimento 24/7, economiza tempo e recursos da equipe, personaliza interações e aumenta a satisfação do cliente, garantindo fidelização e recomendação da sua marca. Automatize seu atendimento no WhatsApp para respostas instantâneas, personalização e maior fidelização dos clientes. Com nosso aplicativo exclusivo, siga perfis no Instagram e Facebook de forma segura e eficiente, criando leads personalizadas e aumentando sua base de contatos de maneira estratégica. E se precisar gerenciar sua lista de contatos, nosso aplicativo exclusivo também pode ajudar, deixando de seguir perfis que já não são do seu interesse, de forma rápida e simples. Entre em contato agora mesmo e descubra como podemos transformar o seu negócio!</p>
 
           </article>
 
           <article>
-            <h3>Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed.</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa. Nullam condimentum mauris et rhoncus sagittis. Sed eu metus in diam tincidunt egestas non at odio.</p>
-            <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean vitae lectus erat. Duis consequat laoreet velit. Mauris convallis, sapien sit amet scelerisque accumsan, felis urna aliquet nunc, viverra mollis odio tellus a nisl. Nulla lobortis lectus non rutrum viverra. Sed et molestie libero. Sed ut ultrices dui.</p>
+            <h3>Convertendo Leads em Oportunidades Reais!</h3>
+            <p>
+              Com as ferramentas da Hub Digital, você terá não apenas uma lead consistente, mas um funil de verdadeiros clientes, cuidadosamente segmentados e interessados em seu conteúdo. Isso significa que sua estratégia de marketing será mais eficaz, alcançando um público altamente engajado e propenso a converter. Nossas soluções garantem que você se conecte com as pessoas certas, no momento certo, aumentando sua taxa de conversão e garantindo o máximo retorno sobre o investimento em marketing. Entre em contato conosco hoje mesmo e descubra como podemos impulsionar suas estratégias para o próximo nível!</p>
           </article>
           </div>
         </section>
 
 
-        <section class="last-articles">
-            <div class="last-articles__title">
-                <div class="container">
-                    <h2>Latest Articles</h2>
-                </div>
-            </div>
-    <!--
 
-
-          </div>    -->
-
-
-
-
-
-
-
-        </section>
 
         <div class="laptop-slider">
           <div class="slideshow">
@@ -266,15 +252,15 @@
 
           <div class="quote-slideshow">
             <figure>
-              <h2>Nam kkkkkkkkkkkkkkkkkkkkkkkkk, fringilla eu risus. Praesent vitae lorem et elit tincidunt accumsan suscipit eu libero. </h2>
+              <h2>Ter uma boa lead e um funil eficiente é como ter um mapa preciso em mãos!</h2>
               <figcaption>
-                Nam mi enim, auctor non ultricies.
+
               </figcaption>
             </figure>
             <figure>
-              <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa.</h2>
+              <h2>Cada lead é uma oportunidade de negócio e cada etapa do funil é uma chance de transformar essa lead em um cliente satisfeito!</h2>
               <figcaption>
-                Nam mi enim, auctor.
+
               </figcaption>
             </figure>
             <span class="prev" style="display:none;"><i class="fas fa-angle-left fa-2x"></i></span>
