--- a/marketing1.html
+++ b/marketing1.html
@@ -180,8 +180,9 @@
                 <!--   <img src="img/teamsprite_01.png" alt="Carousel Img"> -->
                 </div>
                 <div class="people-cards__content">
-                  <h2 class="people-cards__title">Automação com chatbot</h2>
-                  <p class="people-cards__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa.</p>
+                  <h2 class="people-cards__title">Tráfego pago no Facebook</h2>
+                  <p class="people-cards__text">
+                    O tráfego pago no Facebook permite segmentar o público-alvo, aumentar a visibilidade das campanhas, controlar o orçamento, mensurar resultados, aumentar a credibilidade da marca e integrar-se com outras plataformas. É uma forma eficaz de alcançar o público-alvo de maneira segmentada e mensurável.</p>
                 </div>
             </article>
 
@@ -193,8 +194,9 @@
                   <img src="img/instagram-logo.png">
                 </div>
                 <div class="people-cards__content">
-                  <h2 class="people-cards__title">Automão com Python </h2>
-                  <p class="people-cards__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa.</p>
+                  <h2 class="people-cards__title">Tráfego pago no Instagram</h2>
+                  <p class="people-cards__text">
+                    O tráfego pago no Instagram permite segmentação precisa, maior visibilidade das campanhas, controle de orçamento, mensuração de resultados, aumento da credibilidade da marca e integração com outras plataformas, sendo uma estratégia eficaz para engajar o público-alvo de forma mensurável.</p>
                 </div>
             </article>
 
@@ -209,8 +211,8 @@
               <!--   <img src="img/teamsprite_03.png" alt="Carousel Img">  -->
                 </div>
                 <div class="people-cards__content">
-                  <h2 class="people-cards__title">GESTÃO DE TRAFEGO</h2>
-                  <p class="people-cards__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa.</p>
+                  <h2 class="people-cards__title">Fotos Profissionais</h2>
+                  <p class="people-cards__text">A Hub Digital oferece um serviço exclusivo de fotografia profissional para empresas e produtos, proporcionando imagens de alta qualidade para uso em diversos materiais de marketing. Essa vantagem destaca sua marca, fortalecendo sua imagem perante o público-alvo.</p>
                 </div>
             </article>
 
@@ -223,9 +225,9 @@
                <!--  <img src="img/teamsprite_04.png" alt="Carousel Img">  -->
                 </div>
                 <div class="people-cards__content">
-                  <h2 class="people-cards__title">DESENVOLVIMENTO DE E-COMMERCE</h2>
-                  <p class="people-cards__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa.</p>
-                </div>
+                  <h2 class="people-cards__title">DESENVOLVIMENTO Visual</h2>
+                  <p class="people-cards__text">Destaque sua marca com a Hub Digital: nossa equipe de profissionais gabaritados pode desenvolver todo o visual da sua empresa, desde a criação da logomarca até campanhas visuais impactantes. Com um design profissional e personalizado, você vai conquistar a atenção do seu público-alvo e se destacar da concorrência. Transforme sua marca com a Hub Digital e fortaleça sua presença no mercado!</p>
+                                  </div>
             </article>
 
         </section>
@@ -237,25 +239,25 @@
 
 
           <article>
-            <h3>Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed.</h3>
-            <p>Nossa visão na HUB é capacitar empresas de todos os tamanhos e setores com soluções digitais inovadoras. Nós nos esforçamos para fornecer experiências de usuário incomparáveis ​​que impulsionem o crescimento e o sucesso. Nossa equipe se dedica a ultrapassar os limites da tecnologia e do design, garantindo que nossos clientes fiquem à frente da concorrência. Acreditamos num futuro onde a tecnologia e o design serão usados ​​para conectar pessoas e empresas de maneiras novas e estimulantes. Junte-se a nós em nossa jornada para tornar essa visão uma realidade.</p>
+            <h3>Maximize sua Presença Online com Tráfego Pago no Facebook e Instagram.</h3>
+            <p>Maximize seu Impacto com Tráfego Pago no Facebook e Instagram. No Facebook, você pode segmentar seu público-alvo com precisão, ampliar a visibilidade de suas campanhas, controlar o orçamento e integrar suas estratégias de marketing. Enquanto isso, no Instagram, a segmentação refinada, a maior visibilidade, o controle do orçamento e a mensuração de resultados oferecem uma abordagem estratégica e eficaz. Aumente a credibilidade da sua marca e engaje seu público de forma mensurável com o tráfego pago nas redes sociais.</p>
 
           </article>
 
           <article>
-            <h3>Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed.</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa. Nullam condimentum mauris et rhoncus sagittis. Sed eu metus in diam tincidunt egestas non at odio.</p>
-            <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Aenean vitae lectus erat. Duis consequat laoreet velit. Mauris convallis, sapien sit amet scelerisque accumsan, felis urna aliquet nunc, viverra mollis odio tellus a nisl. Nulla lobortis lectus non rutrum viverra. Sed et molestie libero. Sed ut ultrices dui.</p>
+            <h3>Transformando Sua Marca Visual em Destaque</h3>
+            <p>Transforme Sua Marca com a Hub: Profissionalismo Fotográfico e Visual de Destaque!
+
+              Nossos serviços vão além do desenvolvimento visual e profissional. Com a Hub, sua empresa tem acesso a um serviço exclusivo de fotografia profissional, garantindo imagens de alta qualidade para seus produtos e campanhas. Além disso, nossa equipe de profissionais gabaritados cuida de todo o visual da sua marca, desde a criação da logomarca até campanhas visuais impactantes.
+
+              Com um design personalizado e profissional, sua marca conquistará a atenção do público-alvo e se destacará da concorrência. Transforme sua marca com a Hub e fortaleça sua presença no mercado!</p>
+
           </article>
           </div>
         </section>
 
 
-        <section class="last-articles">
-            <div class="last-articles__title">
-                <div class="container">
-                    <h2>Latest Articles</h2>
-                </div>
+
             </div>
     <!--
 
@@ -284,15 +286,15 @@
 
           <div class="quote-slideshow">
             <figure>
-              <h2>Nam kkkkkkkkkkkkkkkkkkkkkkkkk, fringilla eu risus. Praesent vitae lorem et elit tincidunt accumsan suscipit eu libero. </h2>
+              <h2>O tráfego pago permite alcançar um público altamente segmentado, aumentando a visibilidade da marca de forma precisa e eficaz.</h2>
               <figcaption>
-                Nam mi enim, auctor non ultricies.
+                Entre em Contato!
               </figcaption>
             </figure>
             <figure>
-              <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mattis suscipit est, ut imperdiet tortor. Proin sed molestie massa.</h2>
+              <h2>Uma boa imagem é essencial para transmitir profissionalismo, confiança e atrair o interesse do público-alvo.</h2>
               <figcaption>
-                Nam mi enim, auctor.
+                Entre em Contato!
               </figcaption>
             </figure>
             <span class="prev" style="display:none;"><i class="fas fa-angle-left fa-2x"></i></span>
@@ -333,7 +335,7 @@
 
 
         <a id="iconeFixo" href="caminho/do/arquivo.html">
-          <img src="redes/chatbot (1).png" alt="Phene" style="width: 50px; height: 50px;" class="pulsing">
+          <img src="redes/phone-message.png" alt="Phene" style="width: 50px; height: 50px;" class="pulsing">
         </a>
 
 
