--- a/programas1.html
+++ b/programas1.html
@@ -301,7 +301,7 @@
 
 
         <a id="iconeFixo" href="caminho/do/arquivo.html">
-          <img src="redes/chatbot (1).png" alt="Phene" style="width: 50px; height: 50px;" class="pulsing">
+          <img src="redes/phone-message.png" alt="Phene" style="width: 50px; height: 50px;" class="pulsing">
         </a>
 
 
